# quarto-aap-mottakere

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml  setup.py
01_pressemelding/: pressemelding.qmd  pressemelding_202406.qmd  pressemelding_arkiv.qmd
01_pressemelding/arkiv/: pressemelding_202310.qmd  pressemelding_202401.qmd
02_maanedlig/: alder_kjonn.qmd  fylke_alder.qmd
hjelpefunksjoner/: __init__.py  hente_data.py  pressemelding_plott.py
