[tool.poetry]
name = "quarto-aap-mottakere"
authors = ["team Spenn i Nav IT"]
description = "Datafortelling i Quarto for offentlig statistikk på mottakere av arbeidsavklaringspenger (AAP)"
package-mode = false
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
plotly = "^5.22.0"
sqlfluff = "^3.1.0"
oracledb = "^2.2.1"
tabulate = "^0.9.0"
dvh-tools = "^0.7.3"
jupyterlab = "^4.2.4"
google-cloud-storage = "^2.17.0"
google-cloud-secret-manager = "^2.20.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
